User create, edit, delete screens

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
     "ngx-cookie-service": "^11.0.2",
+    "primeng": "^8.0.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
