--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
+    "chart.js": "^3.7.1",
     "express": "^4.17.1",
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
     "ngx-cookie-service": "^11.0.2",
+    "primeicons": "^5.0.0",
     "primeng": "^8.1.1",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
