--- a/angular.json
+++ b/angular.json
@@ -28,7 +28,10 @@
             ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css"
+              "src/styles.css",
+              "primeicons/primeicons.css",
+              "primeng/resources/themes/luna-green/theme.css",
+              "primeng/resources/primeng.min.css"
             ],
             "scripts": []
           },
