--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
     "ngx-cookie-service": "^11.0.2",
-    "primeng": "^8.1.1",
+    "primeicons": "^5.0.0",
+    "primeng": "^11.2.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
