--- a/angular.json
+++ b/angular.json
@@ -22,15 +22,15 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.app.json",
             "aot": true,
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
             "styles": [
               "src/custom-theme.scss",
-              "src/styles.css",
-              "primeicons/primeicons.css",
-              "primeng/resources/themes/luna-green/theme.css",
-              "primeng/resources/primeng.min.css"
+              "src/styles.css"
             ],
-            "scripts": ["node_modules/chart.js/dist/Chart.js"]
+            "scripts": []
           },
           "configurations": {
             "production": {
@@ -87,8 +87,13 @@
             "polyfills": "src/polyfills.ts",
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
-            "assets": ["src/favicon.ico", "src/assets"],
-            "styles": ["src/styles.css"],
+            "assets": [
+              "src/favicon.ico",
+              "src/assets"
+            ],
+            "styles": [
+              "src/styles.css"
+            ],
             "scripts": []
           }
         },
@@ -100,7 +105,9 @@
               "tsconfig.spec.json",
               "e2e/tsconfig.json"
             ],
-            "exclude": ["**/node_modules/**"]
+            "exclude": [
+              "**/node_modules/**"
+            ]
           }
         },
         "e2e": {
