--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
     "bcrypt": "^5.0.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.19.0",
-    "chart.js": "^3.7.1",
-    "express": "^4.17.1",
+    "chart.js": "^2.9.4",
+    "express": "~4.17.1",
     "mongoose": "^5.10.5",
     "morgan": "^1.10.0",
     "ngx-cookie-service": "^11.0.2",
