--- a/package.json
+++ b/package.json
@@ -8,8 +8,9 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "server": "nodemon ./server/app.js",
-    "start": "ng serve",
-    "localhost": "ng build && node ./server/app.js"
+    "start": "node server/app.js",
+    "localhost": "ng build && node ./server/app.js",
+    "heroku-postbuild": "ng build --configuration=production"
   },
   "private": true,
   "dependencies": {
