--- a/package.json
+++ b/package.json
@@ -61,5 +61,9 @@
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
     "typescript": "~4.0.2"
+  },
+  "engines": {
+    "node": "^14.15.1",
+    "npm": "^8.5.5"
   }
 }
